--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==4.2.0
 attrs==22.2.0
+beautifulsoup4==4.11.1
 blinker==1.5
 cachetools==5.2.0
 certifi==2022.12.7
@@ -8,6 +9,7 @@ click==8.1.3
 cohere==3.1.3
 commonmark==0.9.1
 decorator==5.1.1
+deep-translator==1.9.1
 entrypoints==0.4
 gitdb==4.0.10
 GitPython==3.1.29
@@ -35,6 +37,7 @@ rich==12.6.0
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+soupsieve==2.3.2.post1
 streamlit==1.16.0
 toml==0.10.2
 toolz==0.12.0
